unpackaged/main/default/objects/fferpcore__VirtualDataObjectSourceMapping__mdt/fferpcore__VirtualDataObjectSourceMapping__mdt.object-meta.xml
<CustomObject>
    <label>Virtual Data Object Source Mapping</label>
    <pluralLabel>Virtual Data Object Source Mappings</pluralLabel>
</CustomObject>