unpackaged/main/default/objects/fferpcore__VirtualDataObjectSourceMapping__mdt/fields/fferpcore__Custom__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This mapping is custom when checked.</description>
    <inlineHelpText>This mapping is custom when checked.</inlineHelpText>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>