unpackaged/main/default/objects/fferpcore__VirtualDataObjectSourceMapping__mdt/fields/fferpcore__Key__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Key__c</fullName>
    <description>The generic key that the source data can be accessed with.</description>
    <inlineHelpText>The generic key that the source data can be accessed with.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>