unpackaged/main/default/objects/fferpcore__VirtualDataObjectSourceMapping__mdt/fields/fferpcore__Obsolete__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This mapping is obsolete when checked.</description>
    <inlineHelpText>This mapping is obsolete when checked.</inlineHelpText>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>