unpackaged/main/default/objects/fferpcore__VirtualDataObjectSourceMapping__mdt/fields/fferpcore__Provider__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Provider__c</fullName>
    <description>The source of the data, such as an SObjectType.</description>
    <inlineHelpText>The source of the data, such as an SObjectType.</inlineHelpText>
    <label>Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>