unpackaged/main/default/objects/fferpcore__VirtualDataObjectSourceMapping__mdt/fields/fferpcore__Type__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Type__c</fullName>
    <description>The type of mapping. Field for single values. Lookup for pointing to another record. List for pointing to multiple associated records.</description>
    <inlineHelpText>The type of mapping. Field for single values. Lookup for pointing to another record. List for pointing to multiple associated records.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>